--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@tanstack/query-broadcast-client-experimental": "^5.90.2",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.10.1",
@@ -18,7 +20,8 @@
     "next": "15.3.1",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
