--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.10.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
