--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
