--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.6",
     "@prisma/client": "^6.7.0",
     "@tanstack/query-broadcast-client-experimental": "^5.90.2",
     "@tanstack/react-query": "^5.90.2",
